@@ -5,9 +5,7 @@
 		<tbody>
 			<tr>
 				<td>
-                    <!-- BEGIN fileBrowser_simple_upload -->
                     <input type="file" name="fileBrowserUploadFile" />&nbsp;<input type="submit" name="uploadFile" value="{TXT_UPLOAD_FILE}" />
-                    <!-- END fileBrowser_simple_upload -->
                     <!-- BEGIN fileBrowser_advanced_upload -->
                     <script language="javascript" type="text/javascript">
                     // <![CDATA[
@@ -18,7 +16,7 @@
                     }
                     // ]]>
                     </script>
-                    <input type="button" name="fileBrowserUploadFile" value="{TXT_UPLOAD_FILE_MULTI}" onclick="openWindow('{FILEBROWSER_ADVANCED_UPLOAD_PATH}&{CSRF_PARAM}','','width=800,height=600,resizable=yes,status=no,scrollbars=no');" />
+                    <input type="button" name="fileBrowserUploadFile" value="{TXT_FILEBROWSER_START_FILE_UPLOADER}" onclick="openWindow('{FILEBROWSER_ADVANCED_UPLOAD_PATH}&{CSRF_PARAM}','','width=800,height=600,resizable=yes,status=no,scrollbars=no');" />
                     <!-- END fileBrowser_advanced_upload -->
                     <br /><br />
                 </td>
